[package]
name = "guid-create"
version = "0.2.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
description = "Rust helper for creating GUIDs"
repository = "https://github.com/kurtlawrence/guid-create"
readme = "README.md"
keywords = ["guid"]
license = "MIT"

[dependencies]
rand = "0.8.4"
guid = "0.1.0"
byteorder = "1.4.3"
guid-parser = "0.1.0"
chomp = "0.3.1"
serde = {version="1.0.130", optional = true}

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
