[package]
name = "guid-create"
version = "0.4.1"
authors = ["kurt <kurtlawrence92@gmail.com>"]
description = "Rust helper for creating GUIDs"
repository = "https://github.com/kurtlawrence/guid-create"
readme = "README.md"
keywords = ["guid"]
license = "MIT"
edition = "2021"
rust-version="1.60.0"

[dependencies]
rand = { version = "0.8", optional = true }
serde = { version = "1", optional = true }
bytemuck = { version = "1", optional = true }

[features]
default = ["std", "rand"]
std = []
rand = ["dep:rand"]
serde = ["dep:serde"]
bytemuck = ["dep:bytemuck"]

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
